# aurora-grimoire

./: Cargo.toml  README.md  README.ru.md  config.example.toml
ops/: docker-compose.rag-dev.gpu.yml  docker-compose.rag-dev.yml
ops/rerank-service/: Dockerfile  app.py  requirements.txt
src/: config.rs  main.rs
src/cli/: agents.rs  mcp.rs  mod.rs  rag.rs  retrieval_bm25.rs  user_cli.rs
src/cli/rag/: bundle.rs  chunk_md.rs  clear.rs  config_cmd.rs  deploy.rs  dev.rs  embed.rs  fetch_web.rs  struct_md.rs  test_e2e.rs
