[package]
name = "aurora-grimoire"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = true }
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
url = "2.5.7"
ego-tree = "0.10.0"
indicatif = "0.17.11"
tar = "0.4.44"
zstd = "0.13.3"
tantivy = "0.22.0"
rmcp = { version = "0.17.0", default-features = false, features = ["server", "client", "macros", "transport-io", "transport-streamable-http-server", "transport-child-process"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "signal", "io-std"] }
tokio-util = "0.7"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
toml = "0.8"
